--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Robinson Ramirez">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <link rel="stylesheet" href="./src/css/styles.css" type="text/css">
   <title>Interior-consultant-master</title>
 </head>
@@ -26,11 +27,16 @@
       <h1>Modern interior</h1>
       <p>A full-service residential & commercial interior design and staging company offering professional organizing &
         eco-services.</p>
-      <a href="#" class="read" target="_blank">Read more <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></a>
+        <div class="read-2">
+          <p>READ MORE</p>
+          <span class="material-symbols-outlined">
+            arrow_forward
+            </span>
+        </div>
     </section>
     <section class="container-img">
       <div class="img-1">
-        <img src="./src/img/photo1.png" alt="fondo casa sala mueble cuadro" class="img-1">
+        <img src="./src/img/photo1.png" alt="fondo casa sala mueble cuadro" class="img-fondo">
       </div>
       <article class="container-perfil">
         <div class="container-name">
